--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
         "module": "nodenext",
         "target": "esnext",
         "lib": ["esnext"],
+        "types": ["node"],
         "sourceMap": true,
         "declaration": true,
         "declarationMap": true,
