build: :green_heart: add prepare and prepack scripts

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@igen/core",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "description": "",
     "type": "module",
     "main": "./dist/index.js",
@@ -36,6 +36,8 @@
     ],
     "scripts": {
         "build": "tsc -p tsconfig.json",
+        "prepare": "npm run build",
+        "prepack": "npm run build",
         "typecheck": "tsc -p tsconfig.json --noEmit",
         "lint": "eslint .",
         "test": "vitest run --dir test"
